# mkinitcpio-compression-benchmark

./: Cargo.toml  README.md  clippy.toml
src/: byte_string.rs  lib.rs  main.rs  sudo.rs  user_spec.rs
src/bash/: array.rs  byte_string.rs  exec.rs  mod.rs  string.rs
src/measure/: mod.rs  usage.rs
src/mkinitcpio/: config.rs  mod.rs  preset.rs
src/utils/: command.rs  mod.rs  strings.rs
