[package]
name = "mkinitcpio-compression-benchmark"
version = "0.1.0"
edition = "2024"
description = "Run some benchmarks on mkinitcpio compression and decompression algorithms"
keywords = ["mkinitcpio", "benchmark", "compression", "linux"]
readme = "README.md"
publish = false

[dependencies]
anyhow = "^1.0.95"
clap = { version = "^4.5.23", features = ["derive"] }

[dependencies.nix]
version = "^0.29"
features = ["fs", "process", "user"]

[dev-dependencies]
pretty_assertions = "^1.4.1"
