[package]
name = "mkinitcpio-compression-benchmark"
version = "0.1.0"
edition = "2024"
description = "Run some benchmarks on mkinitcpio compression and decompression algorithms"
keywords = ["mkinitcpio", "benchmark", "compression", "linux"]
readme = "README.md"
publish = false

[dependencies]
anyhow = "^1.0.95"
clap = { version = "^4.5.26", features = ["derive"] }
env_logger = "^0.11.6"
format-bytes = "^0.3.0"
hashbrown = "^0.15.2"
log = "^0.4.22"
libc = "^0.2.169"
tempfile = "^3.15.0"

[dependencies.nix]
version = "^0.29"
features = ["fs", "process", "user"]

[dev-dependencies]
pretty_assertions = { version = "^1.4.1", features = ["unstable"] }
test-log = { version = "^0.2.16", features = ["unstable"] }
